--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,110 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261575362451799%22%3A%22HLTzbiv3%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.919Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "datr",
+        "value": "334YaM82xfK0_csKI9waQfVe",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "sb",
+        "value": "334YaDErx7GtBoW3H8SW_kax",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B672x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575362451799",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "fr",
+        "value": "0xBFRmQjGMA0NZPId.AWeDXvBKbx_KGaXS8-zNB-F0kq-mLEm778HhGhXCzYFrQyp49_Y.BoI0H8..AAA.0.0.BoI0IN.AWfPFL1dUV6KRZ7B7OzQ8Kx20RQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "xs",
+        "value": "21%3AEMzFTssEERjT9Q%3A2%3A1747141134%3A-1%3A16232",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100437258%3BT%3A29119026",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2816%3Btimestamp%3A1747141595",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T02:42:11.924Z",
+        "lastAccessed": "2025-05-16T02:42:11.924Z"
+    }
+]
